--- a/views/layouts/default_layout.ejs
+++ b/views/layouts/default_layout.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.css">
 
 
-    <title></title>
+    <title>Sunflower</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/icon/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icon/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/icon/favicon/apple-icon-72x72.png">
@@ -50,8 +50,8 @@
             <div class="social-network">
                 <a href="https://www.instagram.com/" target="_blank"><img class="mr-2" id="social"
                         src="/icon/instagram.svg"></a>
-                <a href="https://www.facebook.com/" target="_blank"><img class="mr-2"
-                        id="social" src="/icon/facebook.svg"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img class="mr-2" id="social"
+                        src="/icon/facebook.svg"></a>
                 <a href="https://www.linkedin.com/" target="_blank"><img class="mr-2" id="social"
                         src="/icon/linkedin.svg"></a>
             </div>
@@ -60,89 +60,89 @@
 
     <%- body %>
 
-    <footer id="footer">
-        <div class="container">
-            <div class="row"> 
-                <div class="col-md-4 offset-md-4 Tcolor">
-                    <p style="font-size: 12px; text-align: center;">
-                        <a class="Tcolor" href="/legal">Mention légales</a>
-                        <br>Nostrum ipsa laudantium distinction &copy;
-                    </p>
+        <footer id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 offset-md-4 Tcolor">
+                        <p style="font-size: 12px; text-align: center;">
+                            <a class="Tcolor" href="/legal">Mention légales</a>
+                            <br>Nostrum ipsa laudantium distinction &copy;
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 offset-md-4">
-                    <div class="social-network">
-                        <a href="https://www.instagram.com/" target="_blank"><img class="mr-2"
-                                id="social" src="/icon/instagram.svg"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img
-                                class="mr-2" id="social" src="/icon/facebook.svg"></a>
-                        <a href="https://www.linkedin.com/" target="_blank"><img class="mr-2"
-                                id="social" src="/icon/linkedin.svg"></a>
+                <div class="row">
+                    <div class="col-md-4 offset-md-4">
+                        <div class="social-network">
+                            <a href="https://www.instagram.com/" target="_blank"><img class="mr-2" id="social"
+                                    src="/icon/instagram.svg"></a>
+                            <a href="https://www.facebook.com/" target="_blank"><img class="mr-2" id="social"
+                                    src="/icon/facebook.svg"></a>
+                            <a href="https://www.linkedin.com/" target="_blank"><img class="mr-2" id="social"
+                                    src="/icon/linkedin.svg"></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script>
 
-        document.getElementById('contact-form').addEventListener('submit', e => {
-            e.preventDefault();
-            const prst = document.querySelector('#prst').value;
-            const name = document.querySelector('#name').value;
-            const email = document.querySelector('#email').value;
-            const optionyes = document.querySelector('#optionyes').value;
-            const message = document.querySelector('#message').value;
-            const captcha = document.querySelector('#g-recaptcha-response').value;
+            document.getElementById('contact-form').addEventListener('submit', e => {
+                e.preventDefault();
+                const prst = document.querySelector('#prst').value;
+                const name = document.querySelector('#name').value;
+                const email = document.querySelector('#email').value;
+                const optionyes = document.querySelector('#optionyes').value;
+                const message = document.querySelector('#message').value;
+                const captcha = document.querySelector('#g-recaptcha-response').value;
 
-            fetch('/send', {
-                method: 'POST',
-                headers: { 'Content-type': 'application/json' },
-                body: JSON.stringify({ name: name, email: email, prst: prst, message: message, captcha: captcha })
+                fetch('/send', {
+                    method: 'POST',
+                    headers: { 'Content-type': 'application/json' },
+                    body: JSON.stringify({ name: name, email: email, prst: prst, message: message, captcha: captcha })
+                })
+                    .then(res => res.json())
+                    .then(data => {
+                        console.log(data);
+                        // alert(data.msg);
+                        document.getElementById('ms-err').innerHTML = data.msg;
+                        document.getElementById('ms-err').style.display = "block"
+                        if (data.success) {
+                            document.getElementById('ms-err').innerHTML = ""
+                            document.getElementById('ms-err').style.display = "none"
+                            document.getElementById("content-form").style.display = "none";
+                            document.getElementById("testdevon").style.display = "block";
+
+
+                            setTimeout(function () {
+                                $('.spinner').addClass('end');
+                            }, 3500);
+
+                        }
+                        //return location.reload();
+                    });
+
             })
-                .then(res => res.json())
-                .then(data => {
-                    console.log(data);
-                    // alert(data.msg);
-                    document.getElementById('ms-err').innerHTML = data.msg;
-                    document.getElementById('ms-err').style.display = "block"
-                    if (data.success) {
-                        document.getElementById('ms-err').innerHTML = ""
-                        document.getElementById('ms-err').style.display = "none"
-                        document.getElementById("content-form").style.display = "none";
-                        document.getElementById("testdevon").style.display = "block";
 
 
-                        setTimeout(function () {
-                            $('.spinner').addClass('end');
-                        }, 3500);
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+        <script src="/javascripts/top.js"></script>
+        <script src="/javascripts/limit_line.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script src="/javascripts/select.js" type="text/javascript"></script>
+        <script src="/javascripts/authorization.js" type="text/javascript"></script>
 
-                    }
-                    //return location.reload();
-                });
+        <script>
 
-        })
-
-
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> 
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
-    <script src="/javascripts/top.js"></script>
-    <script src="/javascripts/limit_line.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="/javascripts/select.js" type="text/javascript"></script>
-    <script src="/javascripts/authorization.js" type="text/javascript"></script>
-
-    <script>
-        
-    </script>
-    <script>
-        AOS.init();
-        baguetteBox.run('.gallery');
-    </script>
+        </script>
+        <script>
+            AOS.init();
+            baguetteBox.run('.gallery');
+        </script>
 </body>
 
 </html>
